# stingray-frame-viewer

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: inspect_avi.py
src/stingray_frame_viewer/: __init__.py  app.py  cache.py  config.py  encoder.py  errors.py  extractor.py  manifest.py  models.py  routes.py
src/stingray_frame_viewer/ingest/: __init__.py  __main__.py  aggregate.py
tests/: conftest.py  test_encoder.py  test_extractor.py  test_ingest_aggregation.py  test_ingest_exclude.py  test_ingest_path_parse.py  test_ingest_skip_existing.py  test_manifest.py  test_routes_phase1.py
